cmake_minimum_required(VERSION 2.8)
project(sph)
set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}")
set(VALGRIND_COMMAND "valgrind ")
set(No_DOC 0)
INCLUDE(CTest)
add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND})
#ADD_DEFINITIONS(-Wall -W -Wconversion  -Wcast-qual -Wwrite-strings )
ADD_DEFINITIONS(-march=native)
INCLUDE(CPack)
 IF(NOT No_DOC)
find_package (Doxygen)
 ENDIF(NOT No_DOC)
find_package(TBB)
find_package(CxxTest)
find_package(Threads)
include_directories(${TBB_INCLUDE_DIRS})
include_directories(${CXXTEST_INCLUDE_DIR})
link_directories(${TBB_LIBRARY_DIRS})
find_file(test_determinism  determinism.sh src/test/)
add_subdirectory(src/computation ./computation  )
add_subdirectory(src/test ./test  )
add_custom_target(sph ALL)
if(${DOXYGEN_FOUND})
add_custom_target(doc)
add_dependencies(doc  doc_computation)
add_dependencies(sph doc)
endif()
add_custom_target(sph_computation)
add_dependencies(sph_computation computation)


add_dependencies(sph  sph_computation)
